[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "uav-py"
version = "0.1.0"
description = "Python bindings for UAV core algorithms"
requires-python = ">=3.9"
dependencies = ["numpy>=1.24"]

[tool.scikit-build]
cmake.minimum-version = "3.18"
build-dir = "build/{wheel_tag}"